<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cmput301t4.gameswap.UI_Temp_Activities_DONOTTOUCH.create_profile"
    android:orientation="vertical"
    android:weightSum="1">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="104dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="31dp"
            android:minHeight="75dp"
            android:minWidth="70dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/New_Game"
            android:id="@+id/newgametext"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="290dp"
        android:id="@+id/scrollView">
        <TableLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow>
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/gameTitle"
                    android:id="@+id/Title"
                    android:layout_gravity="bottom"
                    android:layout_column="6" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/gameTitle"
                    android:ems="10"
                    android:id="@+id/gameTitle"
                    android:layout_column="7" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/release_date"
                    android:id="@+id/releaseDate"
                    android:layout_gravity="bottom"
                    android:layout_column="6" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:hint="dd-MM-yyyy"
                    android:ems="10"
                    android:id="@+id/releaseDateEdit"
                    android:layout_column="7" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/platform"
                    android:singleLine="false"
                    android:id="@+id/Platform"
                    android:layout_gravity="center_vertical"
                    android:layout_column="6" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/consoleSpinner"
                    android:entries="@array/Console"
                    android:layout_column="7" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/quality"
                    android:singleLine="false"
                    android:id="@+id/Quality"
                    android:layout_gravity="center_vertical"
                    android:layout_column="6" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/qualitySpinner"
                    android:entries="@array/Quality"
                    android:layout_column="7" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/private_public"
                    android:singleLine="false"
                    android:id="@+id/Private"
                    android:layout_column="6"
                    android:layout_gravity="center_vertical" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/privatepublicSpinner"
                    android:entries="@array/Public_or_Private"
                    android:layout_column="7" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/description"
                    android:id="@+id/description"
                    android:layout_column="6"
                    android:layout_gravity="center_vertical" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/descriptionBox"
                    android:layout_column="7" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Image"
                    android:singleLine="false"
                    android:id="@+id/addImage"
                    android:layout_column="6"
                    android:layout_gravity="center_vertical" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addImageSpinner"
                    android:entries="@array/Image"
                    android:layout_column="7" />

            </TableRow>


        </TableLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancelButton"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="35dp"
            android:onClick="cancelButtonClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_game"
            android:id="@+id/saveButton"
            android:layout_alignBottom="@+id/cancelButton"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="31dp"
            android:onClick="saveButtonClick" />
    </RelativeLayout>

</LinearLayout>
