<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cmput301t4.gameswap.Activities.EditProfileActivity"
    >

    <EditText
        android:id="@+id/changeName"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:hint="@string/changeName"
        android:layout_gravity="center_vertical"
        android:layout_weight="1.09"
        android:layout_above="@+id/changeCity"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="61dp" />


    <EditText
        android:id="@+id/changeCity"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:layout_gravity="center_vertical"
        android:layout_weight="1.09"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:id="@+id/changePhone"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_num"
        android:layout_gravity="center_vertical"
        android:layout_weight="1.09"
        android:layout_above="@+id/button9"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="66dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/button9"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/button10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/button10"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Edit Your Profile!"
        android:id="@+id/textView10"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button9"
        android:layout_above="@+id/changeName" />

</RelativeLayout>
